tests/scripts/parse_errors/struct.roto
struct Foo {
    x: i32,
}
